--- a/src/minshell.html
+++ b/src/minshell.html
@@ -533,7 +533,7 @@
     </div>
     </div>
 
-    <script src="simulation.js"></script>
+    <script src="index.js"></script>
     <script>
         const config = {
             // General
